# JNI

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/impl/: funcImpl.cpp
app/src/main/java/com/jni/: App.kt  MainActivity.kt  Person.kt  Test.kt
